# api-to-skill-compiler

./: AGENTS.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/api_to_skill_compiler/: __init__.py  cli.py  compiler.py
tests/: test_compiler.py
